--- a/var.yml
+++ b/var.yml
@@ -1,5 +1,5 @@
 [default]
-subscription_id=2489a3c7-9e54-4074-a38d-eb3af3bdc14f
-client_id=598fe56e-920e-428d-b16a-4b9386497ce3
-secret=VU05y3-dw-hH1ZdUOztp~k5g.p.B7WPgUT
-tenant=c0447ee7-7b4a-40e6-85b3-dc6eda2714de
+subscription_id=5ac4ddb1-1638-4fd0-83ca-1fdc58c927db
+client_id=4fd3dcd5-cab6-43ba-a82c-a42f05e5a37b
+secret=bEm_CoXHL~W3_E07H~1zUKz-4Tkne.G6_m
+tenant=1a202a9a-9222-4d0a-9842-7292fb1465ab
